# CRMQ-Experiments

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  generator.hpp  info_tree.cpp  lcp_builder.cpp  statistics.hpp
competitors/: crmq_wrapper.hpp  hyperrmq_wrapper.hpp
experiments_cct/benchmark/: benchmark.cpp  benchmark.hpp  generator.cpp  utils.hpp
experiments_cct/competitors/: crmq_wrapper.hpp
